--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-  "name": "responsive",
+  "name": "travel-site",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Prtfw/responsiveWeb.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Prtfw/responsiveWeb/issues"
-  },
-  "homepage": "https://github.com/Prtfw/responsiveWeb#readme",
   "dependencies": {
-    "jquery": "^3.1.1",
-    "jquery-smooth-scroll": "^2.0.0",
-    "normalize.css": "^5.0.0",
-    "waypoints": "^4.0.1"
+    "jquery": "^2.2.4",
+    "normalize.css": "^4.1.1",
+    "waypoints": "^4.0.0",
+    "jquery-smooth-scroll": "^2.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.2",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "browser-sync": "^2.17.5",
-    "del": "^2.2.2",
+    "async": "^2.1.4",
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "browser-sync": "^2.12.8",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
-    "gulp-postcss": "^6.2.0",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
-    "gulp-watch": "^4.3.10",
-    "postcss-hexrgba": "^0.2.1",
-    "postcss-import": "^8.1.3",
-    "postcss-mixins": "^5.4.0",
+    "gulp-watch": "^4.3.5",
+    "postcss-hexrgba": "^0.2.0",
+    "postcss-import": "^8.1.2",
+    "postcss-mixins": "^4.0.2",
     "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^3.0.0",
-    "webpack": "^1.13.3"
+    "postcss-simple-vars": "^1.2.0",
+    "webpack": "^1.13.1"
   }
 }
